# licence-plate-recognition

./: .gitignore  CMakeLists.txt  readme.md
resources/: properties.config
src/: base.cpp  base.h  main.cpp  main.h
